Marcação do Main, com imagen, titulo e paragrafo.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
         <a href="#">Trabalhos Feitos</a>
         <a href="#">Contatos</a>
     </nav>
-    </header>  
+    </header> 
+    <main>
+     <div>
+       <img src="img/luzdalis.jpg" alt="Minha foto" width=440>  
+       <h1>Sobre Luzdalis Lopez</h1>
+       <p>
+           Olá Pessoa! Tudo bem com você e sua familia?
+           Bom! Eu sou Luzdalis López, e gosto muito da tecnología 
+           especificamente a área de Designer Web. Sou venezuelana
+           com conhecimentos na área, já que me formei como
+           licenciada na computação, as ferramentas que utilizei na 
+           minha formacão professional atualmente estão em desuso,
+           porem, me encuentro atualmente estudando Desemvolvimento
+           web com programação Full Stack na TOTI, para me atualiçar 
+           nas novas ferramentas que são vanguarda no mercado laboral.
+       </p>
+     </div>
+    </main>
 </body>
 </html>
