Criados e Adicionados os arquivos do tag Nav

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <header>
       <img src="img/encabezado.jpg" alt="Computador em escritorio" width="1025">
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Revisão Historica</a>
-        <a href="#">Estudos</a>
-        <a href="#">Objetivos</a>
-        <a href="#">Trabalhos Feitos</a>
-        <a href="#">Contatos</a>
+        <a href="index.html">Home</a>
+        <a href="revisao_historica.html">Revisão Historica</a>
+        <a href="estudos_realizados.html">Estudos Realizados</a>
+        <a href="objetivos.html">Objetivos</a>
+        <a href="trabalhos_feitos.html">Trabalhos Feitos</a>
+        <a href="contatos.html">Contatos</a>
     </nav>
     </header> 
     <main>
@@ -35,5 +35,8 @@
        </p>
      </div>
     </main>
+    <footer>
+        <p> Luzdalis Lopez 2021&copy;Reservado todos os derechos</p>
+    </footer>
 </body>
 </html>
