--- a/index.html
+++ b/index.html
@@ -7,23 +7,30 @@
     <title>Luzdalis Apresentação</title>
 </head>
 <body>
-  <header>
-      <img src="img/encabezado.jpg" alt="Computador em escritorio" width="1025">
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="revisao_historica.html">Revisão Historica</a>
-        <a href="estudos_realizados.html">Estudos Realizados</a>
-        <a href="objetivos.html">Objetivos</a>
-        <a href="trabalhos_feitos.html">Trabalhos Feitos</a>
-        <a href="contatos.html">Contatos</a>
-    </nav>
-    </header> 
-    <main>
-     <div>
-       <img src="img/luzdalis.jpg" alt="Minha foto" width=440>  
-       <h1>Sobre Luzdalis Lopez</h1>
+<header>
+   <section id="menu">   
+      <div><img src="img/luz.jpg" alt="foto minha" width="400"></div>
+      <div>
+        <nav>
+            <a href="revisao_historica.html">Apresentação</a>
+            <a href="estudos_realizados.html">Formação</a>
+            <a href="experiencia.html">Experiência</a>
+            <a href="trabalhos_feitos.html">Projetos</a>
+            <a href="contatos.html">Fale comigo!</a>
+        </nav>
+      </div>
+      <div><img src="img/imagem_top.jpg" alt="foto de banner" width="1600"></div>
+   </section>
+</header> 
+<main>
+    <div><img src="img/luz.jpg" alt="foto minha" width="400"></div> 
+    <div><img src="img/" alt="GitHub" width=""></div> 
+    <div><img src="img/" alt="Linkedin" width=""></div>  
+       <h1>Luzdalis Lopez</h1>
+       <h2>Full-Stack Developer</h2>
+       <h3>Olá Pessoa!</h3>
        <p>
-           Olá Pessoa! Tudo bem com você e sua familia?
+           Tudo bem com você e sua familia?
            Bom! Eu sou Luzdalis López, e gosto muito da tecnología 
            especificamente a área de Designer Web. Sou venezuelana
            com conhecimentos na área, já que me formei como
@@ -33,7 +40,52 @@
            web com programação Full Stack na TOTI, para me atualiçar 
            nas novas ferramentas que são vanguarda no mercado laboral.
        </p>
-     </div>
+    
+    <h2>Formação</h2>
+    <div>
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+
+    <h2>Experiência</h2>
+    <div>
+        <p></p>
+        <p></p>
+        <p></p>
+    </div>
+
+    <section>
+        <h2>Projetos</h2>
+        <div>
+            <img src="" alt="">
+            <h3></h3>
+            <p></p>
+        </div>
+    </section>
+
+    <section>
+        <h2>Contato</h2>
+        <div>
+            <p></p>
+            <p></p>
+            <p></p>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div>
+            <form action="" method="get">
+                <label>Nombre:<input type="text" name="nombre" ></label> 
+                <label>E-mail:</label><input name="email" type="email"> 
+                <label>Assunto:</label><input name="assunto" type="text">  
+                <label>Mensagem:</label><input name="mensagem" type="textarea">                
+                <br><br>
+                <input type="submit" value="ENVIAR">
+            </form>
+        </div>
+    </section> 
+
     </main>
     <footer>
         <p> Luzdalis Lopez 2021&copy;Reservado todos os derechos</p>
