--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Luzdalis Apresentação</title>
+    <link  rel ="stylesheet" href ="style.css">
 </head>
 <body>
 <header>
    <section id="menu">   
-      <div><img src="img/luz.jpg" alt="foto minha" width="400"></div>
+      <div><img  class="perfil" src="img/luz.jpg" alt="foto minha" width="400"></div>
       <div>
         <nav>
             <a href="revisao_historica.html">Apresentação</a>
@@ -17,15 +18,20 @@
             <a href="experiencia.html">Experiência</a>
             <a href="trabalhos_feitos.html">Projetos</a>
             <a href="contatos.html">Fale comigo!</a>
+            
         </nav>
       </div>
-      <div><img src="img/imagem_top.jpg" alt="foto de banner" width="1600"></div>
    </section>
+   <div id="top"></div>
 </header> 
 <main>
-    <div><img src="img/luz.jpg" alt="foto minha" width="400"></div> 
-    <div><img src="img/" alt="GitHub" width=""></div> 
-    <div><img src="img/" alt="Linkedin" width=""></div>  
+<section class="primeira">
+    <div class="coluna1">
+    <div><img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400"></div> 
+    <div><img class="logo" src="img/github-logo.jpg" alt="logo GitHub" width="256"></div> 
+    <div><img class="logo" src="img/linkedin.jpg" alt="logo Linkedin" width="256"></div>  
+    </div>
+    <div class="coluna2">
        <h1>Luzdalis Lopez</h1>
        <h2>Full-Stack Developer</h2>
        <h3>Olá Pessoa!</h3>
@@ -40,7 +46,8 @@
            web com programação Full Stack na TOTI, para me atualiçar 
            nas novas ferramentas que são vanguarda no mercado laboral.
        </p>
-    
+    </div>
+</section>    
     <h2>Formação</h2>
     <div>
         <p></p>
@@ -70,9 +77,9 @@
             <p></p>
             <p></p>
             <p></p>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div><img class="logo" src="img/facebook.jpg" alt="logo facebook" width="256"></div>
+            <div><img class="logo" src="img/instagram.jpg" alt="logo instagram" width="256"></div>
+            <div><img class="logo" src="img/twitter.jpg" alt="logo twitter" width="256"></div>
         </div>
         <div>
             <form action="" method="get">
