melhorada estilização para section primeira

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
    <section id="menu">   
-      <div><img  class="perfil" src="img/luz.jpg" alt="foto minha" width="400"></div>
+      <div class="perfil_pequeno"><img  class="perfil" src="img/luz.jpg" alt="foto minha" width="400"></div>
       <div>
         <nav>
             <a href="revisao_historica.html">Apresentação</a>
@@ -33,7 +33,7 @@
     </div>
     <div class="coluna2">
        <h1>Luzdalis Lopez</h1>
-       <h2>Full-Stack Developer</h2>
+       <h2><em> Full-Stack Developer </em></h2>
        <h3>Olá Pessoa!</h3>
        <p>
            Tudo bem com você e sua familia?
