adicionado logos de midias sobre foto perfil

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <section class="primeira">
     <div class="coluna1">
     <div><img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400"></div> 
-    <div><img class="logo" src="img/github-logo.jpg" alt="logo GitHub" width="256"></div> 
-    <div><img class="logo" src="img/linkedin.jpg" alt="logo Linkedin" width="256"></div>  
+    <div><img class="logo perfil_1" src="img/github-logo.jpg" alt="logo GitHub" width="256"></div> 
+    <div><img class="logo perfil_2" src="img/linkedin.jpg" alt="logo Linkedin" width="256"></div>  
     </div>
     <div class="coluna2">
        <h1>Luzdalis Lopez</h1>
