modificado section primeira

--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
       </div>
    </section>
    <div id="top"></div>
+
 </header> 
 <main>
+
+
 <section class="primeira">
+    
     <div class="coluna1">
-    <div><img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400"></div> 
-    <div><img class="logo perfil_1" src="img/github-logo.jpg" alt="logo GitHub" width="256"></div> 
-    <div><img class="logo perfil_2" src="img/linkedin.jpg" alt="logo Linkedin" width="256"></div>  
+            <img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400"> 
+            <img class="logo perfil_1" src="img/github-logo.jpg" alt="logo GitHub" width="256">
+            <img class="logo perfil_2" src="img/linkedin.jpg" alt="logo Linkedin" width="256">  
     </div>
+
     <div class="coluna2">
        <h1>Luzdalis Lopez</h1>
        <h2><em> Full-Stack Developer </em></h2>
