Adicionada section formação

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Luzdalis Apresentação</title>
     <link  rel ="stylesheet" href ="style.css">
 </head>
+
 <body>
+
 <header>
    <section id="menu">   
       <div class="perfil_pequeno"><img  class="perfil" src="img/luz.jpg" alt="foto minha" width="400"></div>
@@ -23,13 +25,12 @@
       </div>
    </section>
    <div id="top"></div>
-
 </header> 
+
 <main>
 
-
 <section class="primeira">
-    
+
     <div class="coluna1">
             <img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400"> 
             <img class="logo perfil_1" src="img/github-logo.jpg" alt="logo GitHub" width="256">
@@ -38,9 +39,9 @@
 
     <div class="coluna2">
        <h1>Luzdalis Lopez</h1>
-       <h2><em> Full-Stack Developer </em></h2>
+       <h2 class="subtitulo"><em> Full-Stack Developer </em></h2>
        <h3>Olá Pessoa!</h3>
-       <p>
+       <p class="texto">
            Tudo bem com você e sua familia?
            Bom! Eu sou Luzdalis López, e gosto muito da tecnología 
            especificamente a área de Designer Web. Sou venezuelana
@@ -52,31 +53,36 @@
            nas novas ferramentas que são vanguarda no mercado laboral.
        </p>
     </div>
-</section>    
+</section>
+
+<section class="formaçao">
     <h2>Formação</h2>
     <div>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p class="anos">2000-2007</p>
+        <p class="grado">Licenciatura em computação</p>
+        <p class="univer">Universidade de Zulia (Nucleo LUZ) Venezuela</p>
     </div>
+</section>
 
+<section>
     <h2>Experiência</h2>
     <div>
         <p></p>
         <p></p>
         <p></p>
     </div>
+</section>
 
-    <section>
+<section>
         <h2>Projetos</h2>
         <div>
             <img src="" alt="">
             <h3></h3>
             <p></p>
         </div>
-    </section>
+</section>
 
-    <section>
+<section>
         <h2>Contato</h2>
         <div>
             <p></p>
@@ -96,11 +102,11 @@
                 <input type="submit" value="ENVIAR">
             </form>
         </div>
-    </section> 
+</section> 
 
-    </main>
-    <footer>
+</main>
+<footer>
         <p> Luzdalis Lopez 2021&copy;Reservado todos os derechos</p>
-    </footer>
+</footer>
 </body>
 </html>
