Adicionada a section projetos

--- a/index.html
+++ b/index.html
@@ -90,12 +90,15 @@
     </div>
 </section>
 
-<section>
+<section class="projetos">
         <h2>Projetos</h2>
-        <div>
-            <img src="" alt="">
-            <h3></h3>
-            <p></p>
+        <div class="projeto1">
+            <img class="portal" src="img/portal.jpg" alt="">
+            <h3 class="nome_projeto">Teleamanecerfm</h3>
+            <p>Projeto de Portal interativo para a Fundação Amanecer,
+                adaptado para transmissão radiofônica e televisiva. 
+                Feito na Venezuela</p>
+            <a class="boton" href="">Repositorio</a>
         </div>
 </section>
 
