Adicionada a section Contatos

--- a/index.html
+++ b/index.html
@@ -95,31 +95,35 @@
         <div class="projeto1">
             <img class="portal" src="img/portal.jpg" alt="">
             <h3 class="nome_projeto">Teleamanecerfm</h3>
-            <p>Projeto de Portal interativo para a Fundação Amanecer,
+            <p class="texto_projeto">Projeto de Portal interativo para a Fundação Amanecer,
                 adaptado para transmissão radiofônica e televisiva. 
                 Feito na Venezuela</p>
             <a class="boton" href="">Repositorio</a>
         </div>
 </section>
 
-<section>
-        <h2>Contato</h2>
-        <div>
-            <p></p>
-            <p></p>
-            <p></p>
-            <div><img class="logo" src="img/facebook.jpg" alt="logo facebook" width="256"></div>
-            <div><img class="logo" src="img/instagram.jpg" alt="logo instagram" width="256"></div>
-            <div><img class="logo" src="img/twitter.jpg" alt="logo twitter" width="256"></div>
+<section class="contato">
+
+        <div class="contato_logos">
+            <div>
+                <h2>Contato</h2>
+                <p class="texto_contato">Quer entrar em contato comigo?</p>
+                <p class="texto_contato">Prencha o formulario ao lado e entrarei em contato o mais rápido possivel.</p>
+                <p class="texto_contato">Você tambem pode me encontrar nas seguintes redes sociais:</p>
+            </div>
+            <div>
+                <img class="logo_contato" src="img/facebook.jpg" alt="logo facebook" width="256">
+                <img class="logo_contato" src="img/instagram.jpg" alt="logo instagram" width="256">
+                <img class="logo_contato" src="img/twitter.jpg" alt="logo twitter" width="256">
+            </div>
         </div>
-        <div>
+        <div class="formulario">
             <form action="" method="get">
-                <label>Nombre:<input type="text" name="nombre" ></label> 
-                <label>E-mail:</label><input name="email" type="email"> 
-                <label>Assunto:</label><input name="assunto" type="text">  
-                <label>Mensagem:</label><input name="mensagem" type="textarea">                
-                <br><br>
-                <input type="submit" value="ENVIAR">
+                <div class="label"><div><label>Nombre:</div><input class="text" type="text" name="nombre" ></label></div> 
+                <div class="label"><div><label>E-mail:</div></label><input class="text" name="email" type="email"></div> 
+                <div class="label"><div><label>Assunto:</div></label><input class="text" name="assunto" type="text"></div>  
+                <div class="label "><div><label>Mensagem:</div></label><input class="textarea" name="mensagem" type="textarea"></div>                
+                <div><input type="submit" value="ENVIAR"></div>
             </form>
         </div>
 </section> 
