Feito os links do menu

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="perfil_pequeno"><img  class="perfil" src="img/luz.jpg" alt="foto minha" width="400"></div>
       <div>
         <nav>
-            <a href="revisao_historica.html">Apresentação</a>
-            <a href="estudos_realizados.html">Formação</a>
-            <a href="experiencia.html">Experiência</a>
-            <a href="trabalhos_feitos.html">Projetos</a>
-            <a href="contatos.html">Fale comigo!</a>
+            <a href="#menu">Apresentação</a>
+            <a href="#formac">Formação</a>
+            <a href="#exper">Experiência</a>
+            <a href="#projec">Projetos</a>
+            <a href="#contat">Fale comigo!</a>
             
         </nav>
       </div>
@@ -55,7 +55,7 @@
     </div>
 </section>
 
-<section class="formaçao">
+<section id="formac" class="formaçao">
     <h2>Formação</h2>
     <div>
         <p class="anos">2000-2007</p>
@@ -64,7 +64,7 @@
     </div>
 </section>
 
-<section class="experiencia">
+<section id="exper" class="experiencia">
     <h2>Experiência</h2>
     <div>
         <div>
@@ -90,7 +90,7 @@
     </div>
 </section>
 
-<section class="projetos">
+<section id="projec" class="projetos">
         <h2>Projetos</h2>
         <div class="projeto1">
             <img class="portal" src="img/portal.jpg" alt="">
@@ -102,7 +102,7 @@
         </div>
 </section>
 
-<section class="contato">
+<section id="contat" class="contato">
 
         <div class="contato_logos">
             <div>
