Adicionados links e removidos arquivos que não se precisam

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <div class="coluna1">
             <img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400"> 
-            <img class="logo perfil_1" src="img/github-logo.jpg" alt="logo GitHub" width="256">
-            <img class="logo perfil_2" src="img/linkedin.jpg" alt="logo Linkedin" width="256">  
+            <a href="https://github.com/Luzdalis" target="_blank" rel="noopener noreferrer"><img class="logo perfil_1" src="img/github-logo.jpg" alt="logo GitHub" width="256"></a>
+            <a href="https://www.linkedin.com/in/luzdalis-lopez-4106a9207/" target="_blank" rel="noopener noreferrer"><img class="logo perfil_2" src="img/linkedin.jpg" alt="logo Linkedin" width="256"></a> 
     </div>
 
     <div class="coluna2">
@@ -98,7 +98,7 @@
             <p class="texto_projeto">Projeto de Portal interativo para a Fundação Amanecer,
                 adaptado para transmissão radiofônica e televisiva. 
                 Feito na Venezuela</p>
-            <a class="boton" href="">Repositorio</a>
+            <a class="boton" href="https://github.com/Luzdalis/teleamanecer.git" target="_blank" rel="noopener noreferrer">Repositorio</a>
         </div>
 </section>
 
@@ -112,9 +112,9 @@
                 <p class="texto_contato">Você tambem pode me encontrar nas seguintes redes sociais:</p>
             </div>
             <div>
-                <img class="logo_contato" src="img/facebook.jpg" alt="logo facebook" width="256">
-                <img class="logo_contato" src="img/instagram.jpg" alt="logo instagram" width="256">
-                <img class="logo_contato" src="img/twitter.jpg" alt="logo twitter" width="256">
+                <a href="https://www.facebook.com/luzdalis/" target="_blank" rel="noopener noreferrer"><img class="logo_contato" src="img/facebook.jpg" alt="logo facebook" width="256"></a>
+                <a href="https://www.instagram.com/luzdalis_d_romero/" target="_blank" rel="noopener noreferrer"><img class="logo_contato" src="img/instagram.jpg" alt="logo instagram" width="256"></a>
+                <a href="https://twitter.com/lalilromero" target="_blank" rel="noopener noreferrer"><img class="logo_contato" src="img/twitter.jpg" alt="logo twitter" width="256"></a>
             </div>
         </div>
         <div class="formulario">
@@ -130,7 +130,7 @@
 
 </main>
 <footer>
-        <p> Luzdalis Lopez 2021&copy;Reservado todos os derechos</p>
+        <p> Luzdalis Lopez 2021&copy;Reservado todos os direitos</p>
 </footer>
 </body>
 </html>
