--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
         <div class="contato_logos">
             <div>
-                <h2>Contato</h2>
+                <h2 class="margin">Contato</h2>
                 <p class="texto_contato">Quer entrar em contato comigo?</p>
                 <p class="texto_contato">Prencha o formulario ao lado e entrarei em contato o mais rápido possivel.</p>
                 <p class="texto_contato">Você tambem pode me encontrar nas seguintes redes sociais:</p>
             </div>
-            <div>
+            <div class="logos_baixos">
                 <a href="https://www.facebook.com/luzdalis/" target="_blank" rel="noopener noreferrer"><img class="logo_contato" src="img/facebook.jpg" alt="logo facebook" width="256"></a>
                 <a href="https://www.instagram.com/luzdalis_d_romero/" target="_blank" rel="noopener noreferrer"><img class="logo_contato" src="img/instagram.jpg" alt="logo instagram" width="256"></a>
                 <a href="https://twitter.com/lalilromero" target="_blank" rel="noopener noreferrer"><img class="logo_contato" src="img/twitter.jpg" alt="logo twitter" width="256"></a>
@@ -123,7 +123,7 @@
                 <div class="label"><div><label>E-mail:</div></label><input class="text" name="email" type="email"></div> 
                 <div class="label"><div><label>Assunto:</div></label><input class="text" name="assunto" type="text"></div>  
                 <div class="label "><div><label>Mensagem:</div></label><input class="textarea" name="mensagem" type="textarea"></div>                
-                <div><input type="submit" value="ENVIAR"></div>
+                <div class="center"><input type="submit" value="ENVIAR"></div>
             </form>
         </div>
 </section> 
