Modificada as regras para posicionamento da imagen de perfil

--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
 <section class="primeira">
 
     <div class="coluna1">
-            <img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400"> 
+            <img class="perfil2" src="img/luz.jpg" alt="foto minha" width="400">
             <a href="https://github.com/Luzdalis" target="_blank" rel="noopener noreferrer"><img class="logo perfil_1" src="img/github-logo.jpg" alt="logo GitHub" width="256"></a>
-            <a href="https://www.linkedin.com/in/luzdalis-lopez-4106a9207/" target="_blank" rel="noopener noreferrer"><img class="logo perfil_2" src="img/linkedin.jpg" alt="logo Linkedin" width="256"></a> 
+            <a href="https://www.linkedin.com/in/luzdalis-lopez-4106a9207/" target="_blank" rel="noopener noreferrer"><img class="logo perfil_2" src="img/linkedin.jpg" alt="logo Linkedin" width="256"></a>
     </div>
 
-    <div class="coluna2">
-       <h1>Luzdalis Lopez</h1>
-       <h2 class="subtitulo"><em> Full-Stack Developer </em></h2>
-       <h3>Olá Pessoa!</h3>
-       <p class="texto">
+       <h1 class="coluna2">Luzdalis Lopez</h1>
+       <p class="subtitulo coluna2"><em> Full-Stack Developer </em></p>
+       <h3 class="coluna2">Olá Pessoa!</h3>
+       <p class="texto coluna2">
            Tudo bem com você e sua familia?
            Bom! Eu sou Luzdalis López, e gosto muito da tecnología 
            especificamente a área de Designer Web. Sou venezuelana
@@ -52,7 +51,6 @@
            web com programação Full Stack na TOTI, para me atualiçar 
            nas novas ferramentas que são vanguarda no mercado laboral.
        </p>
-    </div>
 </section>
 
 <section id="formac" class="formaçao">
