--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
       <div>
         <nav>
             <a href="#menu">Apresentação</a>
-            <a href="#formac">Formação</a>
-            <a href="#exper">Experiência</a>
-            <a href="#projec">Projetos</a>
-            <a href="#contat">Fale comigo!</a>
+            <a href="#formaçao">Formação</a>
+            <a href="#experiencia">Experiência</a>
+            <a href="#projetos">Projetos</a>
+            <a href="#contato">Fale comigo!</a>
             
+            <button id="botão_nav">
+                <div id="b1"></div>
+                <div id="b2"></div>
+                <div id="b3"></div>
+            </button>
+
         </nav>
       </div>
    </section>
@@ -53,7 +59,7 @@
        </p>
 </section>
 
-<section id="formac" class="formaçao">
+<section id="formaçao" class="formaçao">
     <h2>Formação</h2>
     <div>
         <p class="anos">2000-2007</p>
@@ -62,25 +68,25 @@
     </div>
 </section>
 
-<section id="exper" class="experiencia">
+<section id="experiencia" class="experiencia">
     <h2>Experiência</h2>
     <div>
-        <div>
+        <div class="tempo_actividade">
             <p class="anos">2006-2007</p>
             <p class="grado">Secretaria</p>
             <p class="univer">GMC Helpdesk</p>
         </div>
-        <div>
+        <div class="tempo_actividade">
             <p class="anos">2007-2007</p>
             <p class="grado">Designer Web e facilitador do curso</p>
             <p class="univer">C.E. Shekina</p>
         </div>
-        <div>
+        <div class="tempo_actividade">
             <p class="anos">2007-2013</p>
             <p class="grado">Web Designer, Secretária e administradora</p>
             <p class="univer">Fundação Amanecer</p>
         </div>
-        <div>
+        <div class="tempo_actividade">
             <p class="anos">2015-2015</p>
             <p class="grado">Secretária e administradora</p>
             <p class="univer">Fundação Alfa Visão</p>
@@ -88,7 +94,7 @@
     </div>
 </section>
 
-<section id="projec" class="projetos">
+<section id="projetos" class="projetos">
         <h2>Projetos</h2>
         <div class="projeto1">
             <img class="portal" src="img/portal.jpg" alt="">
@@ -100,7 +106,7 @@
         </div>
 </section>
 
-<section id="contat" class="contato">
+<section id="contato" class="contato">
 
         <div class="contato_logos">
             <div>
